--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "passport-twitter": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
     "bcrypt": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "logfmt": "~0.20.0"
   },
   "engines": {
-    "node": "*"
+    "node": "0.10.x"
   },
   "main": "app.js",
   "devDependencies": {},
